--- a/css/style.css
+++ b/css/style.css
@@ -100,3 +100,13 @@ body
 {
 	display: none !important;
 }
+
+@media(min-width: 0px) and (max-width: 767px)
+{
+	div#side-2 {
+    width: 100% !important;
+    padding: 0px;
+    height: 100% !important;
+    margin-top: 18px;
+	}
+}
