--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ body
 {
 	font-size: 20px;
 	color:#9CA1A3;
+	cursor: pointer;
 }
 .chat-pic
 {
@@ -96,11 +97,45 @@ body
 	overflow-y:scroll;
 	overflow-x: hidden;
 }
+#listChat
+{
+	overflow-y:scroll;
+	overflow-x: hidden;
+}
 .dropdown-toggle::before
 {
 	display: none !important;
 }
+.dropdown-toggle::after
+{
+	display: none !important;
+}
 
+#emoji
+{
+	position: absolute;
+	top:-30vh;
+	background-color: white;
+	border-radius: 5px;
+	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+#emoji #myTabContent
+{
+	height:20vh;
+}
+#myTabContent a
+{
+	text-decoration: none;
+}
+#audioicon
+{
+	border-radius:50%;
+	font-size:20px;
+	background-color:lightgreen;
+	padding:10px; 
+	padding-left:15px;
+	padding-right:15px;
+}
 @media(min-width: 0px) and (max-width: 640px)
 {
 	div#side-2 {
